# Gmic

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  run.bash
src/: contract.rs  lib.rs  service.rs  state.rs
web-frontend/: .env  Cargo.toml  index.html  kill_dev.sh  package-lock.json  package.json  package.json.bak  vite.config.js
web-frontend/public/: index.html  wallet_info.txt
web-frontend/src/: App.css  App.js  GMOperations.js  GraphQLProvider.js  Leaderboard.js  NotificationCenter.js  WalletProvider.js  adSettings.json  index.js  queries.js
web-frontend/src/components/: ChatHistory.js  EmojiPicker.css  EmojiPicker.js  GifPicker.css  GifPicker.js  VoiceRecorder.css  VoiceRecorder.js
web-frontend/srcold/: App.css  App.js  GMOperations.js  GraphQLProvider.js  NotificationCenter.js  WalletProvider.js  index.js  vite.config.ts
